--- a/src/NHibernate.AutoMigration.Test/Templating/Templates/FluentMigrator/Resources.resx
+++ b/src/NHibernate.AutoMigration.Test/Templating/Templates/FluentMigrator/Resources.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="MigrationFile1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>MigrationFile1.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="Sample1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Sample1.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="Template1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Template1.liquid;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
